cmake_minimum_required (VERSION 3.8)
project (LintCode)
set (CMAKE_CXX_STANDARD 11)

add_executable (remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cc)
add_executable (long_consecutove_sequence long_consecutove_sequence.cc)
add_executable (two_sum two_sum.cc)
add_executable (remove_element remove_element.cc)
add_executable (3sum_closest 3sum_closest.cc)
add_executable (next_permutation next_permutation.cc)
add_executable (trapping_rain_water trapping_rain_water.cc)
add_executable (rotate_image rotate_image.cc)
add_executable (plus_one plus_one.cc)
add_executable (climbing_stairs climbing_stairs.cc)
add_executable (set_matrox_zeros set_matrox_zeros.cc)
add_executable (gas_station gas_station.cc)
add_executable (candy candy.cc)
add_executable (single_number single_number.cc)
add_executable (single_number_1 single_number_1.cc)
